# automate_boring_stuff

./: .gitignore  .tool-versions  README.md  hello.py  if_elif_example.py  if_else_example.py  if_example.py  pyproject.toml  while_example.py  your_name.py
.github/: FUNDING.yml
.github/workflows/: main.yml
chapters/00_intro/: README.md
chapters/01_python_basics/: README.md
chapters/02_flow_control/: README.md  five_times.py  while_example.py  your_name.py
chapters/03_functions/: README.md  built-in_functions.py  guess.py
chapters/04_lists/: README.md
chapters/05_dictionaries/: README.md
chapters/06_strings/: README.md  string_methods.py  tictactoe.py
chapters/07_regex/: README.md  phone_email.py  regex.py
data_structures/: string_methods.py  tictactoe.py
debugging/: blah.py  broken_calc.py  coin_flip.py  debug.py  logging.py
dictionaries/: character_count.py  dictionary.py
docs/: llms.txt  read_write_pdf.py  read_write_xls.py  ro_xls.py  rw_docx.py  rw_pdf.py
email/: imap.py  smtp.py
error_handling/: try_except.py
files/: cp_mv_rm.py  filenames_abs_rel_paths.py  rw_plaintext.py
for/: five_times.py  lists_multi_assn_aug_ops.py
full_prog/: guess.py
functions/: built-in_functions.py  custom_functions.py
gui/: kbd.py  mouse.py  screenshot.py
if_elif_else/: if_elif_example.py  if_else_example.py  if_example.py
methods/: list_methods.py
regex/: phone_email.py  regex.py
resources/: bacon.txt  example.xlsx  my_data  time_sheet.xlsx
var/: global_local.py
web_scraping/: parse_html_bs4.py  requests.py  scrape_sel.py  webbrowser.py
(+46 files in other folders)
