[project]
name = "automate-boring-stuff"
version = "1.0.0"
description = "Loosely follows the Automate the Boring Stuff Udemy course by Al Sweigart"
authors = [{ name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "Unlicense"

dependencies = [
    "automateboringstuff3",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.4.0,<9",
    "rich>=13.4.2,<14",
    "ruff>=0.12.11",
]

test = [
    "pytest>=7.1.3,<8",
    "pytest-asyncio>=0.21.1,<0.22",
    "pytest-cov>=4.0.0,<5",
    "pytest-datafiles>=3.0.0,<4",
    "pytest-xdist>=3.3.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
